@@ -57,7 +57,6 @@ description = "MZmine"
 
 defaultTasks "test", "jpackage", "notarizeApp"
 
-
 // Check the OS
 project.ext.osSuffix = OperatingSystem.current().getName().replaceAll(" ", "_")
 if (OperatingSystem.current().isLinux()) project.ext.osSuffix = "Linux"
@@ -281,6 +280,21 @@ tasks.withType(JavaExec) {
 application {
     mainClass.set("io.github.mzmine.main.MZmineCore")
     applicationName = "MZmine"
+    applicationDefaultJvmArgs = [
+            // https://github.com/controlsfx/controlsfx/wiki/Using-ControlsFX-with-JDK-9-and-above
+            "--add-exports=javafx.base/com.sun.javafx.event=org.controlsfx.controls",
+            "--add-exports=javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls",
+            "--add-exports=javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls",
+            "--add-opens=javafx.controls/javafx.scene.control.skin=org.controlsfx.controls",
+            "--add-exports=javafx.graphics/com.sun.javafx.css=org.controlsfx.controls",
+            "--add-opens=javafx.controls/javafx.scene.control.skin=org.controlsfx.controls",
+            "--add-exports=javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls",
+            "--add-exports=javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls",
+            "--add-opens=javafx.controls/javafx.scene.control.skin=org.controlsfx.controls",
+
+            // logging
+            "-Djava.util.logging.config.class=io.github.mzmine.main.MZmineLoggingConfiguration"
+    ]
 }
 
 /*
@@ -369,7 +383,8 @@ runtime {
                    "-XX:MaxRAMPercentage=80",
                    "-enableassertions",
                    "-Djava.util.logging.config.class=io.github.mzmine.main.MZmineLoggingConfiguration",
-                   "--enable-preview"]
+                   "--enable-preview",
+        ]
     }
 }
 
